# superlu-sys

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs
src/: dsp_blas2.rs  dsp_blas3.rs  lib.rs  slu_ddefs.rs  slu_util.rs  sp_preorder.rs  superlu_enum_consts.rs  supermatrix.rs
tests/: dgstrf.rs  lib.rs
