[package]
name = "superlu-sys"
version = "0.3.2"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to SuperLU."
documentation = "https://docs.rs/superlu-sys"
homepage = "https://github.com/stainless-steel/superlu-sys"
repository = "https://github.com/stainless-steel/superlu-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "superlu"

[dependencies]
libc = "0.2"
openblas-src = "0.5"
