[package]
name = "superlu-sys"
version = "0.3.2"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>", "Henrik Stromberg <henrik@askdrq.com>"]
description = "The package provides bindings to SuoerLU. Fork of superlu-sys by Ivan Ukov."
documentation = "https://docs.rs/superlu-sys"
repository = "https://github.com/HenrikJStromberg/superlu-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "superlu"

[dependencies]
libc = "0.2"
openblas-src = "0.10.8"
